# alembicio

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
YourContext/: CLAUDE.md  DESIGN.md  INVARIANTS.md  PROMPTS.md  SECURITY.md  research-report.md
YourContext/.cursor/rules/: 00-invariants.mdc  20-core-review-lane.mdc
alembicio/: __init__.py  cli.py  config.py  runtime.py
alembicio/adapters/: base.py  pgvector.py
alembicio/core/: budget.py  control_plane.py  reconcile.py  state.py  worker.py
alembicio/eval/: golden.py  metrics.py  report.py
alembicio/mapping/: __init__.py  procrustes.py  ridge.py
alembicio/providers/: base.py  constants.py  fastembed_local.py  gemini.py  http_util.py  openai.py
examples/: embmigrate.example.yaml  golden.example.jsonl
scripts/: smoke_provider.py
tests/: __init__.py  test_cli.py  test_config.py
tests/core/: __init__.py  conftest.py  fakes.py  harness.py  test_budget.py  test_state_machine.py  test_worker_properties.py
tests/crash/: __init__.py  conftest.py  corpus.py  db.py  runner.py  test_crash_resume.py  test_harness_detects_bugs.py
tests/integration/: conftest.py  test_pgvector.py
tests/providers/: test_providers.py
