[project]
name = "alembicio"
version = "0.1.0"
description = "Zero-downtime embedding model migration orchestrator"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "alembicio contributors" }]
dependencies = [
    "typer>=0.12",
    "pydantic>=2",
    "pyyaml>=6",
    "numpy>=1.26",
    "psycopg[binary,pool]>=3.1",
    "httpx>=0.27",
    "rich>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "hypothesis>=6",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML>=6",
    "testcontainers[postgres]>=4",
    "respx>=0.22",
]
demo = [
    "fastembed>=0.4",
]

[project.scripts]
alembicio = "alembicio.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alembicio"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["alembicio", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["alembicio"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests requiring docker Postgres",
]
